feat: earn up to 8%

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             #1 baking.finance
                         </div>
                     </div>
-                    <h2 class="mb-4 black-shadow">Delegate your tez and earn 6% annual rewards in one click ! 💰</h2>
+                    <h2 class="mb-4 black-shadow">Delegate your tez and earn up to 8% annual rewards in one click ! 💰</h2>
                     <p class="mb-4 black-shadow">Participate in tomorrow's economy.<br>
                         Discover the Tezos blockchain by delegating your coins.<br>
                         Receive freshly created Tez every three days.
@@ -286,7 +286,7 @@
 <div id="investir" class="page-section no-scroll bg-dark fg-white">
     <h2 class="text-center wow fadeIn mb-5">Invest</h2>
     <div class="container">
-        <p class="text-center">Delegate your tez and enjoy the 6% annual return</p>
+        <p class="text-center">Delegate your tez and enjoy the 8% annual return</p>
         <div class="row align-items-center">
             <div class="col-lg-5 wow fadeIn ">
                 <div class="img-place">
@@ -508,7 +508,7 @@
         </div>
          <div class="accordion-item">
           <button id="accordion-button-5" aria-expanded="false">
-            <span class="accordion-title">How can I earn ~6% annual rewards in tez?</span>
+            <span class="accordion-title">How can I earn ~8% annual rewards in tez?</span>
             <span class="icon" aria-hidden="true"></span>
           </button>
           <div class="accordion-content">
@@ -685,7 +685,7 @@
           </div>
         </div>
         <div class="accordion-item">
-          <a  class="accordion-item-a">How can I earn ~6% annual rewards in tez?</a>
+          <a  class="accordion-item-a">How can I earn ~8% annual rewards in tez?</a>
           <div class="content">
             <p>By delegating your funds (button DELEGATE above), you become a delegator and make a contribution to our Baker. Thus, every ~3 days, you will receive new XTZ from us,
               to reward your contribution.</p>
