feat: contact us

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                     <h2 class="mb-4">Frequently Asked Questions</h2>
                     <p>If you have any questions about Blockchain, Cryptocurrencies or even Tezos, maybe the following list of questions and answers will help you.</p>
                     <p class="fg-primary fw-medium">Do you need help?</p>
-                    <a id="contact-us" href="#footer" class="btn btn-gradient btn-split-icon rounded-pill inline-flex-center">
+                    <a id="contact-us" href="mailto:baking.finance@outlook.fr" class="btn btn-gradient btn-split-icon rounded-pill inline-flex-center">
                      <span class="icon">
                         <div class="inline-flex-center" style="height: 100%; ">
                            <img class="custom-icon-2 height-auto" src="assets/images/mail-icon.png">
