feat: add umami wallet

--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
                         </div>
                         <img src="assets/images/airgap-logo.png" alt="label" class="iconic-md fg-white">
                     </a>
-                    <a class="iconic-item wow fadeInUp wallet" href="https://cryptonomic.tech/galleon.html" target="_blank">
+                    <a class="iconic-item wow fadeInUp wallet" href="https://umamiwallet.com" target="_blank">
                         <div class="iconic-content">
-                            <h5>Galleon Wallet</h5>
-                            <p class="fs-small"><strong>Opensource</strong> and <strong>Tezos</strong> specific, Galleon is a Wallet available on macOS, Windows and Linux.</p>
+                            <h5>Umami Wallet</h5>
+                            <p class="fs-small"><strong>Opensource</strong> and <strong>Tezos</strong> specific, Umami is a Wallet available on macOS, Windows and Linux.</p>
                         </div>
                         <img src="assets/images/cryptonomic-logo.png" alt="label" class="iconic-md fg-white">
                     </a>
