--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         <div class="container h-100">
             <div class="row align-items-center h-100">
                 <div class="col-lg-6 wow fadeInUp">
+                    <h3 class="mb-4 black-shadow">
+                        Powered by Blockhouse
+                    </h3>
+                    <img src="assets/images/blockhouse-horizontal-white.png" alt="label" style="height: 7vh; margin-bottom: 4vh">
                     <div>
                         <div class="badge mb-2 inline-flex-center">
                            <span class="icon mr-1">
